<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textocontador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="100sp"
        android:text="@string/valor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.209" />
    <ImageView
        android:id="@+id/coin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="sumar"
        android:src="@drawable/coinok"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        android:contentDescription="@string/moneda"/>

    <LinearLayout
        android:id="@+id/datosJuego"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coin">

        <TextView
            android:id="@+id/textValorClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contadores"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textValorAutoClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contadores"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textVelocidadAutoClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contadores"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/atras"
        style="@style/backImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/volver"
        android:contentDescription="@string/imagen_atras"/>
    <Button
        android:id="@+id/miBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        style="@style/botones"
        android:onClick="reiniciarJuego"
        app:layout_constraintTop_toBottomOf="@id/datosJuego"
        app:layout_constraintBottom_toTopOf="@id/iconoCarrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />


    <ImageView
        android:id="@+id/iconoCarrito"
        android:layout_width="112dp"
        android:layout_height="93dp"
        android:onClick="irACompras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/carrito"
        android:contentDescription="@string/carrito"/>


</androidx.constraintlayout.widget.ConstraintLayout>